crates/capsec/tests/compile_fail/requires_on_wrong_type.stderr
warning: unused import: `capsec::prelude::*`
 --> tests/compile_fail/requires_on_wrong_type.rs:2:5
  |
2 | use capsec::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `NoHas: CapProvider<FsRead>` is not satisfied
 --> tests/compile_fail/requires_on_wrong_type.rs:7:18
  |
7 | fn process(ctx: &NoHas) {}
  |                  ^^^^^ unsatisfied trait bound
  |
help: the trait `CapProvider<FsRead>` is not implemented for `NoHas`
 --> tests/compile_fail/requires_on_wrong_type.rs:4:1
  |
4 | struct NoHas;
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `CapProvider<P>`:
            `Attenuated<P, S>` implements `CapProvider<P>`
            `Cap<(Ambient, Ambient)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvRead)>` implements `CapProvider<EnvRead>`
            `Cap<(Ambient, EnvWrite)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, EnvWrite)>` implements `CapProvider<EnvWrite>`
            `Cap<(Ambient, FsAll)>` implements `CapProvider<Ambient>`
            `Cap<(Ambient, FsAll)>` implements `CapProvider<FsAll>`
          and $N others
note: required by a bound in `_assert_has_0`
 --> tests/compile_fail/requires_on_wrong_type.rs:6:1
  |
6 | #[capsec::requires(fs::read, on = ctx)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_assert_has_0`
  = note: this error originates in the attribute macro `capsec::requires` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `ctx`
 --> tests/compile_fail/requires_on_wrong_type.rs:7:12
  |
7 | fn process(ctx: &NoHas) {}
  |            ^^^ help: if this is intentional, prefix it with an underscore: `_ctx`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
